# fungine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build-3d-party-libs.sh  build-3rd-party-libs.sh  clean-3rd-party-dirs.sh  cleanup.sh  compile-header-file.sh  copy-3rd-party-includes.sh  copy-3rd-party-libs.sh  copy-libs.sh  create-combined-header.sh  create-include-dir.sh  install-3rd-party-deps.sh
src/: Fungine.hpp  Fungine_manual.hpp
src/components/: Component.cpp  Component.h
src/components/common/: Transform.cpp  Transform.h
src/components/guiComponents/: GUIImage.cpp  GUIImage.h  GUIPanel.cpp  GUIPanel.h  GUIText.cpp  GUIText.h
src/components/rendering/: Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h
src/components/rendering/lighting/: Lights.cpp  Lights.h
src/components/rendering/lighting/shadows/: Shadows.cpp  Shadows.h
src/components/rendering/renderers/: GUIRenderer.cpp  GUIRenderer.h  GUITextRenderer.cpp  GUITextRenderer.h  NatureRenderer.cpp  NatureRenderer.h  Renderer.cpp  Renderer.h  TerrainRenderer.cpp  TerrainRenderer.h
src/core/: Common.h  Debug.cpp  Debug.h  Program.cpp  Program.h
src/core/resourceManaging/: ResourceManager.cpp  ResourceManager.h
src/core/window/: Window.cpp  Window.h
src/core/window/input/: CursorPosEvent.h  InputHandler.cpp  InputHandler.h  KeyEvent.h  MouseButtonEvent.h
src/core/window/openglWindow/: OpenglWindow.cpp  OpenglWindow.h
src/entities/: Entity.cpp  Entity.h
src/entities/commonEntitiesLib/: CommonEntityFactory.cpp  CommonEntityFactory.h
src/entities/commonEntitiesLib/shapes2D/: CommonShapes2D.cpp  CommonShapes2D.h
src/entities/commonEntitiesLib/shapes3D/: CommonShapes.cpp  CommonShapes.h
src/entities/guiEntities/: Panel.cpp  Panel.h
src/entities/terrain/: Terrain.cpp  Terrain.h
src/graphics/: Buffers.cpp  Buffers.h  Framebuffer.cpp  Framebuffer.h  Graphics.cpp  Graphics.h  RendererCommands.cpp  RendererCommands.h  Texture.cpp  Texture.h
src/graphics/opengl/: OpenglBuffers.cpp  OpenglBuffers.h  OpenglFramebuffer.cpp  OpenglFramebuffer.h  OpenglMesh.cpp  OpenglMesh.h  OpenglRendererCommands.cpp  OpenglRendererCommands.h  OpenglTexture.cpp  OpenglTexture.h
src/graphics/opengl/shaders/: OpenglShaderProgram.cpp  OpenglShaderProgram.h  OpenglShaderStage.cpp  OpenglShaderStage.h
src/graphics/shaders/: ShaderProgram.cpp  ShaderProgram.h  ShaderStage.cpp  ShaderStage.h  ShaderUniforms.h
src/utils/: Time.cpp  Time.h
src/utils/fontUtils/: Font.cpp  Font.h
src/utils/imgUtils/: Image.cpp  Image.h
src/utils/modelLoading/: MeshSkeletonParsing.cpp  MeshSkeletonParsing.h  MeshVertexParsing.cpp  MeshVertexParsing.h  ModelLoading.cpp  ModelLoading.h
src/utils/myMathLib/: Matrix4.cpp  Matrix4.h  MyMathLib.cpp  MyMathLib.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
